# deepTools

./: .gitignore  .planemo.sh  .readthedocs.yaml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  azure-pipelines.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
.azure-pipelines/: test-template.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  env.yml  planemo.yml  test_and_build.yml
.github/workflows/: planemo.yml  pypi.yml  test.yml
config/: deepTools.cfg  deepTools.cfg.default
deeptools/: SES_scaleFactor.py  _version.py  alignmentSieve.py  bamCompare.py  bamCorrelate.py  bamCoverage.py  bamFilterReads.py  bamFingerprint.py  bamHandler.py  bamPEFragmentSize.py  bigwigAverage.py  bigwigCompare.py  bigwigCorrelate.py  cm.py  compareSignal.py  computeGCBias.py  computeMatrix.py  computeMatrixOperations.py  config.py  correctGCBias.py  correctReadCounts.py  correlation.py  correlation_heatmap.py  countReadsPerBin.py  deepBlue.py  deeptools_list_tools.py  estimateReadFiltering.py  estimateScaleFactor.py  getFragmentAndReadSize.py  getRatio.py  getScaleFactor.py  getScorePerBigWigBin.py  heatmapper.py  heatmapper_utilities.py  mapReduce.py  misc.py  multiBamCoverage.py  multiBamSummary.py  multiBigwigSummary.py  parserCommon.py  (+15 more)
deeptools/config/: __init__.py  deeptools.cfg
deeptools/test/: skiptest_heatmapper_images.py  test_bamCoverage_and_bamCompare.py  test_bigwigAverage.py  (+15 more)
deeptoolsintervals/: __init__.py  enrichment.py  parse.py
docs/: About-deepTools.rst  Gallery.rst  Makefile  README.txt  api_tutorial.rst  conf.py  genindex.html  home.rst  index.html  index.rst  installation.rst  make.bat  py-modindex.html  requirements.in  requirements.txt  search.html
galaxy/: bam2wig.xml  bamCompare.xml  bamCorrelate.xml  bamCoverage.xml  bamFingerprint.xml  bigwigCompare.xml  computeGCBias.xml  computeMatrix.xml  correctGCBias.xml  deepTools_macros.xml  heatmapper.xml  profiler.xml  readme.rst  tool_data_table_conf.xml.sample  tool_dependencies.xml  ts-localInstallation.md
gallery/: Whyte_TypicalEnhancers_ESC.bed
manual/: GalaxyFAQs.md  GalaxyHelp.md  GalaxyHowTo.md  GalaxyHowWeUseDeepTools.md  QC.md  normalizations.md  visualizations.md
manual_beforeWiki/: GalaxyFAQs.md  normalizations.md
scripts/: convertChromsBigWig.py  mappabilityBigWig_to_unmappableBed.sh  split_bed_into_multiple_files.py  subsetMatrix
(+349 files in other folders)
