[build-system]
requires = [
    "setuptools"
]

[project]
name = "deepTools"
version = "3.5.3"
authors = [
    {name="Fidel Ramirez"},
    {name="Devon P Ryan"},
    {name="Björn Grüning"},
    {name="Friederike Dündar"},
    {name="Sarah Diehl"},
    {name="Vivek Bhardwaj"},
    {name="Fabian Kilpert"},
    {name="Andreas S Richter"},
    {name="Steffen Heyne"},
    {name="Thomas Manke"},
    {email="bioinfo-core@ie-freiburg.mpg.de"}
]
requires-python = ">=3.7"
dependencies = [
    "numpy >= 1.9.0",
    "scipy >= 0.17.0",
    "matplotlib >= 3.3.0",
    "pysam >= 0.14.0",
    "numpydoc >= 0.5",
    "pyBigWig >= 0.2.1",
    "py2bit >= 0.2.0",
    "plotly >= 4.9",
    "deeptoolsintervals >= 0.1.8",
    "importlib-metadata" # python 3.7 support
]
description = "Useful tools for exploring deep sequencing data."
license = {file = "LICENSE.txt"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
readme = "README.rst"

[project.urls]
homepage = "https://pypi.python.org/pypi/deepTools/"
documentation = "https://deeptools.readthedocs.io/en/latest/"
repository = "https://github.com/deeptools/deepTools"

[tool.setuptools]
packages = ["deeptools"]

[project.scripts]
alignmentSieve = "deeptools.alignmentSieve:main"
bamCompare = "deeptools.bamCompare:main"
bamCoverage = "deeptools.bamCoverage:main"
bamPEFragmentSize = "deeptools.bamPEFragmentSize:main"
bigwigAverage = "deeptools.bigwigAverage:main"
bigwigCompare = "deeptools.bigwigCompare:main"
computeGCBias = "deeptools.computeGCBias:main"
computeMatrix = "deeptools.computeMatrix:main"
computeMatrixOperations = "deeptools.computeMatrixOperations:main"
correctGCBias = "deeptools.correctGCBias:main"
deeptools = "deeptools.deeptools_list_tools:main"
estimateReadFiltering = "deeptools.estimateReadFiltering:main"
estimateScaleFactor = "deeptools.estimateScaleFactor:main"
multiBamSummary = "deeptools.multiBamSummary:main"
multiBigwigSummary = "deeptools.multiBigwigSummary:main"
plotCorrelation = "deeptools.plotCorrelation:main"
plotCoverage = "deeptools.plotCoverage:main"
plotEnrichment = "deeptools.plotEnrichment:main"
plotFingerprint = "deeptools.plotFingerprint:main"
plotHeatmap = "deeptools.plotHeatmap:main"
plotPCA = "deeptools.plotPCA:main"
plotProfile = "deeptools.plotProfile:main"
